# Darwin

./: .env.example  .gitignore  DEMO.md  LICENSE  README.md  SUBMISSION.md  pyproject.toml  requirements.txt
darwin/: __init__.py  binance.py  cli.py  config.py  data_source.py  mcp_server.py  report.py  validation.py
darwin/cmc/: __init__.py  client.py
darwin/evolve/: __init__.py  engine.py  generate.py  mutate.py  prompts.py  seeds.py
darwin/execute/: __init__.py  twak.py  twak_gateway.py
darwin/identity/: __init__.py  bnb.py
darwin/strategy/: __init__.py  backtest.py  indicators.py  metrics.py  spec.py
scripts/: demo.py  evolve_test.py  export_dashboard.py  oos_test.py  smoke_test.py
skill/: SKILL.md  mcp_config.json  skill.json
skill/references/: spec-format.md
strategies/: sample-champion-report.md  sample-champion.json
web/: .env.example  .gitignore  README.md  package-lock.json  package.json  tailwind.config.ts
web/app/: globals.css  layout.tsx  opengraph-image.tsx  page.tsx
web/app/api/evolve/: route.ts
web/app/api/sentiment/: route.ts
web/components/: ChampionCard.tsx  EquityChart.tsx  EvolutionTimeline.tsx  FearGreedGauge.tsx  Footer.tsx  Header.tsx  Hero.tsx  LiveEvolve.tsx  LiveSentimentBadge.tsx  MetricsGrid.tsx  OOSComparison.tsx  OnChainCard.tsx  SponsorStrip.tsx
web/components/brand/: Logo.tsx
web/components/ui/: Counter.tsx  Pill.tsx  Reveal.tsx  Section.tsx
web/lib/: data.ts  llm.ts
web/public/data/: darwin.json
