[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "darwin-foundry"
version = "0.1.0"
description = "Evolutionary trading-strategy foundry for BNB Chain (BNB Hack, Track 2)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40.0",
    "requests>=2.32.0",
    "pandas>=2.2.0",
    "numpy>=2.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
chain = ["web3>=7.0.0", "bnbagent>=0.3.0", "eth-account>=0.11.0"]

[project.scripts]
darwin = "darwin.cli:main"

[tool.setuptools.packages.find]
include = ["darwin*"]
